--- a/templates/index.html
+++ b/templates/index.html
@@ -9,25 +9,37 @@
     {% include 'navbar.html' %}
     <div>
     <!-- Only for a example-->
-    <center><h1 style="color:white;">Bienvenido</h1></center>
+    <center>
+        <h1 style="color:white;">Bienvenido</h1>
+    </center>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum pariatur, laboriosam temporibus perspiciatis corporis rem provident. Aspernatur totam iure consectetur. Recusandae et magni nulla quod magnam nam est saepe esse! 
+    </p>
     <section class="slider-container">
         <button class="prev">&#10094;</button>
         <div class="slider">
             <div class="slide">
-                <img src="" alt="Imagen 1">
+                <img src="https://media.istockphoto.com/id/2047220331/es/foto/generar-tecnolog%C3%ADa-de-ia-aprendizaje-autom%C3%A1tico-en-la-red-de-big-data-datos-cerebrales.jpg?s=2048x2048&w=is&k=20&c=BPVxwqH3PKd0Ovj5mEP8oktvZIvtPwMpXRAFI4toJ8s=" alt="Imagen 1">
             </div>
             
             <div class="slide">
-                <img src="" alt="Imagen 2">
+                <img src="https://media.istockphoto.com/id/1139543056/es/foto/ilustraci%C3%B3n-3d-explosi%C3%B3n-de-la-bombilla-sobre-un-fondo-azul-con-concepto-de-pensamiento.jpg?s=2048x2048&w=is&k=20&c=TffimPQo_BiJ6Y8-NfRymA4bnEeI1zbhLhDv_0seRLs=" alt="Imagen 2">
             </div>
             
             <div class="slide">
-                <img src="" alt="Imagen 3">
+                <img src="https://media.istockphoto.com/id/1979289147/es/foto/ciencia-del-an%C3%A1lisis-de-datos-y-big-data-con-tecnolog%C3%ADa-de-ia-el-analista-o-cient%C3%ADfico-utiliza.jpg?s=2048x2048&w=is&k=20&c=BiaRDYXssFd4WrWB1F8PqlJKVdVi77K9zpClepZKu_o=" alt="Imagen 3">
             </div>
+            
         </div>
         
         <button class="next">&#10095;</button>
     </section>
+    <!-- <div class="article-link">
+        <figure>
+            <img src="https://res.cloudinary.com/dbulfrlrz/images/w_840,h_420,c_scale/f_auto,q_auto/f_auto,q_auto/v1720813476/wp-pme/what_is_data_sovereignty_blog_cover/what_is_data_sovereignty_blog_cover.?_i=AA" alt="">
+        </figure>
+        <a href="">ejemplo de una aplicacion</a>
+    </div> -->
     </div>
 
 
