--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -1,14 +1,14 @@
 /*Slide for the first website's page*/
 
 .slider-container {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   display: flex;
   flex-direction: row;
   justify-content:stretch;
 }
 
 .slider {
-  width: 90%;
+  width: 100%;
   height: 250px;
   /*position: relative;*/
 
@@ -29,7 +29,7 @@
   transform: translate(0);
   transition: opacity 0.5s ease-in-out;
   position: absolute;
-
+  padding: 0;
 }
 
 
@@ -53,17 +53,26 @@
   font-size: 30px;
   padding: 10px;
   cursor: pointer;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: none;
+  color: black;
+  background-color: #1ebda0;
+  border:none;
+
+  
 }
+
+
 
 
 
 .prev {
   left: 10px;
+  border-top-left-radius:10px ;
+  border-bottom-left-radius:10px ;
 }
 
 .next {
   right: 10px;
+
+  border-top-right-radius:10px ;
+  border-bottom-right-radius:10px ;
 }
