--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{{url_for('static',filename='css/normalize.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/navbar.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/text.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/article-link.css')}}">
     <title>{% block title %} Wissen | {% endblock %}</title>
 
 </head>
