--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,10 +5,10 @@
         </ul>
 
         <ul class="center_navbar_father">
-            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Inicio</a></li>
-            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></li>
-            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Blog</a></li>
-            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank" id="contacto">Contacto</a></li>
+            <li class="center_navbar animated"><a class="text_linked" href="/">Inicio</a></li>
+            <li class="center_navbar animated"><a class="text_linked" href="#">Proyectos</a></li>
+            <li class="center_navbar animated"><a class="text_linked" href="/blog">Blog</a></li>
+            <li class="center_navbar animated"><a class="text_linked" href="/login" id="contacto">Sign up</a></li>
         </ul>
     
 
