--- a/templates/auth/sign.html
+++ b/templates/auth/sign.html
@@ -2,7 +2,7 @@
 
 <!-- TItulo del sitio web-->
 {% block title %}
-    {{super()}} Login
+    {{super()}} Sign up
 {% endblock %}
 
 {% block content%}
