--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{url_for('static',filename='css/normalize.css')}}">
+
+
+
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/navbar.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/text.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/article-link.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/cards.css')}}">
-    {% block style %}{% endblock %}
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+    {% block style %}
+        <!-- Custom Css-->
+
+    {% endblock %}
+
     <title>{% block title %} Wissen | {% endblock %}</title>
 
 </head>
@@ -22,13 +33,14 @@
     
     <!-- Script -->
     {% block script %}
-        <!-- If you need to use any script, you only need use Jinja2 and change it-->
+        <!-- Custom scripts -->
     {% endblock %}
-
-    <!-- This file's default script-->
-    <script src="{{url_for('static',filename='js/main.js')}}"></script>
 
     <!-- This file need to be check-->
     <script src="{{url_for('static',filename='js/navbar_dropdown.js')}}"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.7"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
