--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,28 +1,40 @@
+<!-- Header -->
+
 <header>
-    <nav class="navbar">
-        <ul class="left_navbar">   
-            <li class="title_navbar">WISSEN</li>
-        </ul>
 
-        <ul class="center_navbar_father">
-            <li class="center_navbar animated"><a class="text_linked" href="/">Inicio</a></li>
-            <li class="center_navbar animated"><a class="text_linked" href="#">Proyectos</a></li>
-            <li class="center_navbar animated"><a class="text_linked" href="/blog">Blog</a></li>
-            <li class="center_navbar animated"><a class="text_linked" href="/login" id="contacto">Sign up</a></li>
-        </ul>
-    
+    <div class="container">
+        <header class="border-bottom lh-1 py-3">
+            <div class="row flex-nowrap justify-content-between align-items-center">
+                <div class="col-4 pt-1">
+                    <a class="link-secondary" href="/signup">Crear una cuenta</a>
+                </div>
+                <div class="col-4 text-center">
+                    <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Wissen Blog</a>
+                </div>
 
-        <ul class="right_navbar_father">
-            <li class="right_navbar"></li>
-            <li class="right_navbar"></li>
-            <li class="right_navbar"></li>
-        </ul>
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                    <a href="/login" class="btn btn-outline-success" type="submit">Login</a>
+                </div>
 
-        <div class="button_container" style="display:none;">
-            <button class="button_menu" id="button_menu">
-                <img src='static\picture\three_lines.png';" alt="">
-            </button>
+
+            </div>
+        </header>
+
+        <!-- Nabvar -->
+        <div class="nav-scroller py-1 mb-3 border-bottom">
+            <nav class="nav nav-underline justify-content-between">
+                <a class="nav-item nav-link link-body-emphasis" href="#">Technology</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Design</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">programming</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Python</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Javascript</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">English</a>
+            </nav>
         </div>
-    </nav>
-
+    </div>
 </header>
