--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,8 @@
 
 
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/navbar.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/text.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/article-link.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='css/cards.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/var.css')}}">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
