--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,9 +5,13 @@
     <div class="container">
         <header class="border-bottom lh-1 py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
-                <div class="col-4 pt-1">
-                    <a class="link-secondary" href="/signup">Crear una cuenta</a>
+                <div class="text-linked-container col-4 pt-1">
+                    <a class="sign-up link-secondary" href="/signup">Crear una cuenta</a>
                 </div>
+                <div class="text-linked-container col-4 pt-1">
+                    <a  class="sign-up login" href="/login" type="submit">Iniciar Sesion</a>
+                </div>
+
                 <div class="col-4 text-center">
                     <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Wissen Blog</a>
                 </div>
@@ -19,7 +23,7 @@
                     </form>
                     <a href="/login" class="btn btn-outline-success" type="submit">Login</a>
                 </div>
-
+                
 
             </div>
         </header>
