--- a/static/css/header.css
+++ b/static/css/header.css
@@ -123,10 +123,17 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1.25rem;
   color: #727272;
 }
+/*nav */
+
+div nav.nav{
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
 
 /*<a> container ↓*/
 div.text-linked-container{
   width:12em;
+  height: 100%;
 }
   
 
@@ -158,4 +165,20 @@ a.sign-up.login{
 a.sign-up.login:hover{
   background-color: var(--main-green);
 
+}
+
+/*navlinks */
+
+.nav a.nav-link{
+  background-color: transparent;;
+  border-bottom: 1px solid transparent;
+  color: black;
+  padding: 0;
+  margin-top:2px ;
+  margin-bottom: 2px;
+
+}
+.nav a.nav-link:hover{
+  color: green;
+  border-bottom: 1px solid black;
 }
