--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,11 +17,10 @@
                 </div>
 
                 <div class="col-4 d-flex justify-content-end align-items-center">
-                    <form class="d-flex" role="search">
+                    <!--<form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                    <a href="/login" class="btn btn-outline-success" type="submit">Login</a>
+                    </form>-->
                 </div>
                 
 
@@ -31,13 +30,13 @@
         <!-- Nabvar -->
         <div class="nav-scroller py-1 mb-3 border-bottom">
             <nav class="nav nav-underline justify-content-between">
-                <a class="nav-item nav-link link-body-emphasis" href="#">Technology</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Design</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">programming</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Python</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Javascript</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">English</a>
+                <a class="choosed nav-link" href="#">Technology</a>
+                <a class="choosed nav-link" href="#">Design</a>
+                <a class="choosed nav-link" href="#">programming</a>
+                <a class="choosed nav-link" href="#">Python</a>
+                <a class="choosed nav-link" href="#">Javascript</a>
+                <a class="choosed nav-link" href="#">Science</a>
+                <a class="choosed nav-link" href="#">English</a>
             </nav>
         </div>
     </div>
