--- a/static/css/var.css
+++ b/static/css/var.css
@@ -23,4 +23,9 @@
     /*transition*/
 
     --transition:0.2s;
+
+    /*box shadow*/
+
+    --inside-box-shadow: inset 0px 0px 14px 3px rgba(0,0,0,0.15);
+    --outside-box-shadow:0px 0px 14px 3px rgba(0,0,0,0.15);
 }
