Agregando rutas temporales mieestras se continua el desarrollo backend

--- a/wissen/templates/navbar.html
+++ b/wissen/templates/navbar.html
@@ -6,10 +6,10 @@
         <header class="border-bottom lh-1 py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="text-linked-container col-4 pt-1">
-                    <a class="sign-up link-secondary" href="/signup">Crear una cuenta</a>
+                    <a class="sign-up link-secondary" href="/auth/register">Crear una cuenta</a>
                 </div>
                 <div class="text-linked-container col-4 pt-1">
-                    <a  class="sign-up login" href="/login" type="submit">Iniciar Sesion</a>
+                    <a  class="sign-up login" href="/auth/login" type="submit">Iniciar Sesion</a>
                 </div>
 
                 <div class="col-4 text-center">
