Implementaion del login, faltan elementos

--- a/wissen/templates/auth/login.html
+++ b/wissen/templates/auth/login.html
@@ -192,16 +192,16 @@
 
 
   <main class="form-signin w-100 m-auto">
-    <form>
+    <form method="POST"> 
       <img class="mb-4" src="/static/picture/html.png" alt="" width="72" height="57">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
       <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input type="email" name="username" class="form-control" id="floatingInput" placeholder="name@example.com" required>
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input type="password"  name="password" class="form-control" id="floatingPassword" placeholder="Password" required>
         <label for="floatingPassword">Password</label>
       </div>
 
@@ -211,8 +211,10 @@
           Remember me
         </label>
       </div>
-      <a href="/signup">Create account</a>
-      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+
+      <a href="/auth/register">Create account</a>
+
+      <input type="submit" class="btn btn-primary w-100 py-2" value="Log in">
       <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
     </form>
   </main>
