--- a/wissen/templates/auth/register.html
+++ b/wissen/templates/auth/register.html
@@ -20,10 +20,10 @@
                     <input type="text" name="surname_user">
             
                     <label for="email">E-mail: </label>
-                    <input type="email" name="email" id="">
+                    <input type="email" name="username" id="username" required>
             
                     <label for="password">Crear contrasena: </label>
-                    <input type="password" name="password" id="">
+                    <input type="password" name="password" id="password" required>
             
                     <label for="password-verify">Repetir contrasena: </label>
                     <input type="password" name="password-verify" id="">
