--- a/wissen/templates/base.html
+++ b/wissen/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,30 +12,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
     {% block style %}
-        <!-- Custom Css-->
+    <!-- Custom Css-->
 
     {% endblock %}
 
     <title>{% block title %} Wissen | {% endblock %}</title>
 
 </head>
+
 <body>
 
     {% block content%}
-        <!-- Contenido -->
+    <!-- Contenido -->
     {% endblock %}
-    
+
+    <!-- Mensajes flasheados -->
+    <section class="content">
+        {% for message in get_flashed_messages() %}
+        <div class="flash alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </section>
+
     <!-- Script -->
     {% block script %}
-        <!-- Custom scripts -->
+    <!-- Custom scripts -->
     {% endblock %}
 
     <!-- This file need to be check-->
     <script src="{{url_for('static',filename='js/navbar_dropdown.js')}}"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.7"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{url_for('static',filename='js/button.js')}}"></script>
 </body>
+
 </html>
