--- a/wissen/templates/navbar.html
+++ b/wissen/templates/navbar.html
@@ -9,7 +9,7 @@
                     <a class="sign-up link-secondary" href="/auth/register">Crear una cuenta</a>
                 </div>
                 <div class="text-linked-container col-4 pt-1">
-                    <a  class="sign-up login" href="/auth/login" type="submit">Iniciar Sesion</a>
+                    <a class="sign-up login" href="/auth/login" type="submit">Iniciar Sesion</a>
                 </div>
 
                 <div class="col-4 text-center">
@@ -17,12 +17,23 @@
                 </div>
 
                 <div class="col-4 d-flex justify-content-end align-items-center">
-                    <!--<form class="d-flex" role="search">
+                    {% if g.user %}
+                    <li><span>{{ g.user['username'] }}</span>
+                    <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+                        {% else %}
+                    <li><a href="{{ url_for('auth.register') }}">Register</a>
+                    <li><a href="{{ url_for('auth.login') }}">Log In</a>
+                        {% endif %}
+                        <!--<form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>-->
+
+                        <!-- Ejemplo -->
+
+
                 </div>
-                
+
 
             </div>
         </header>
