--- a/wissen/templates/navbar.html
+++ b/wissen/templates/navbar.html
@@ -1,44 +1,56 @@
 <!-- Header -->
 
 <header>
-
     <div class="container">
         <header class="border-bottom lh-1 py-3">
             <div class="row flex-nowrap justify-content-between align-items-center">
-                <div class="text-linked-container col-4 pt-1">
-                    <a class="sign-up link-secondary" href="/auth/register">Crear una cuenta</a>
-                </div>
-                <div class="text-linked-container col-4 pt-1">
-                    <a class="sign-up login" href="/auth/login" type="submit">Iniciar Sesion</a>
-                </div>
 
-                <div class="col-4 text-center">
-                    <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Wissen Blog</a>
-                </div>
+                <!-- En caso de haber una "session" activa -->
+                {% if g.user %}
+                    <!-- Boton para cerrar la "session" del usuario-->
+                    <div class="text-linked-container col-4 pt-1">
+                        <a class="sign-up login" href="{{ url_for('auth.logout') }}">Log Out</a>
+                    </div>
 
-                <div class="col-4 d-flex justify-content-end align-items-center">
-                    {% if g.user %}
-                    <li><span>{{ g.user['username'] }}</span>
-                    <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-                        {% else %}
-                    <li><a href="{{ url_for('auth.register') }}">Register</a>
-                    <li><a href="{{ url_for('auth.login') }}">Log In</a>
-                        {% endif %}
-                        <!--<form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>-->
+                    <!-- Titulo central de la pagina web -->
+                    <div class="col-4 text-center">
+                        <p class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Wissen Blog</a>
+                    </div>
 
-                        <!-- Ejemplo -->
+                    <!-- Nombre del usuario en la "session" -->
+                    <div class="col-4 d-flex justify-content-end align-items-center">
+                        <a>{{ g.user['username'] }}</a>
+                        <h5>
+                                Si es admin: <a href="{{ url_for('blog.create') }}">dashboard - new post</a>
+                        </h5>
+                            
+                    </div>
+
+                {% else %}
+                    <!-- Boton para el formulario de registro -->
+                    <div class="text-linked-container col-4 pt-1">
+                        <a class="sign-up link-secondary" href="{{ url_for('auth.register') }}">Register</a>
+                    </div>
+
+                    <!-- Boton para iniciar "session" -->
+                    <div class="text-linked-container col-4 pt-1">
+                        <a class="sign-up login" href="{{ url_for('auth.login') }}">Log In</a>
+                    </div>
 
 
-                </div>
+                    <!-- Titulo central de la pagina web -->
+                    <div class="col-4 text-center">
+                        <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Wissen Blog</a>
+                    </div>
 
-
+                    <div class="col-4 d-flex justify-content-end align-items-center">
+                        <!-- Div vacio-->
+                    </div>
+                {% endif %}
             </div>
         </header>
 
-        <!-- Nabvar -->
+        <!-- Navbar -->
         <div class="nav-scroller py-1 mb-3 border-bottom">
             <nav class="nav nav-underline justify-content-between">
                 <a class="choosed nav-link" href="#">Technology</a>
